k8s/currency-rate-requests-processor/deployment-currency-rate-requests-processor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-rate-requests-processor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency-rate-requests-processor
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-rate-requests-processor
    spec:
      containers:
        - image: northug/currency-rate-requests-processor:latest
          name: currency-rate-requests-processor
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
      imagePullSecrets:
        - name: regcred
