k8s/currency-rate-requests-processor/service-currency-rate-requests-processor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: currency-rate-requests-processor
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: currency-rate-requests-processor
  type: ClusterIP
