k8s/currency-rate-requests-processor/ingress-currency-rate-requests-processor.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-currency-rate-requests-processor
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currency-rate-requests-processor
                port:
                  number: 80
